src/test/resources/org/korren/test/jlox/samples/errors/subclass_loop.lox
class Oops < Oops {} // Error: "[line 1] Error at 'Oops': A class can't inherit from itself."
